[package]
name = "diff-bk"
version = "0.1.0"
license = "GPL-3.0-or-later"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diffmatchpatch = "0.0.4"
neon = "1"
similar = "2.5.0"
strsim = "0.11.1"
